plugins {
    id 'java'
    id 'io.freefair.lombok' version '5.3.0'
}

group 'org.dxworks'
version '2.5.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name 'ossrh'
        url 'https://s01.oss.sonatype.org/content/repositories/snapshots'
    }
}

dependencies {

    //command line runner
    implementation group: 'info.picocli', name: 'picocli', version: '4.0.0-alpha-2'

    implementation group: 'me.tongfei', name: 'progressbar', version: '0.7.2'

    //data format parsers
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0.rc1'
    implementation 'com.opencsv:opencsv:4.1'
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'


    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation 'commons-lang:commons-lang:2.6'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
    implementation 'org.apache.commons:commons-collections4:4.4'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    implementation 'org.dxworks:dx-ignore:1.1.0-SNAPSHOT'
    implementation 'org.dxworks:argumenthor:1.1.0-SNAPSHOT'
    implementation 'org.dxworks:dx-linguist:1.0.0-SNAPSHOT'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes "Main-Class": "org.dxworks.insider.Insider"
    }

    from {
        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
